Orange Bar of Death work
* Add old MonoBook-esque CSS styles back
* Move the bar just above #content (so that it won't be impacted by VisualEditor)
* Remove weird margin on the "you have new messages" notice
* Give the notice the standard "usermessage" CSS class
* Unset the "You have a new Talk page message" cruft in the personal tools drop-down menu, it's beyond useless

Also fixed indentation of the getAndRearrangePersonalTools() method: it was indented using tabs *plus one space* -- I removed the superfluous space.

Change-Id: I1833a072324fe32aef5cb7d58aa7c17b8dea01a5

--- a/refreshed/styles/screen/common.less
+++ b/refreshed/styles/screen/common.less
@@ -696,8 +696,15 @@ a.feedlink {
 	text-align: center;
 }
 
-#new-talk {
-	margin-left: 2em;
+/* user notification thing a.k.a the Orange Bar of Death */
+.usermessage {
+	background-color: #ffce7b;
+	border: 1px solid #ffa500;
+	color: #000;
+	font-weight: bold;
+	margin: 2em 0 1em;
+	padding: .5em 1em;
+	vertical-align: middle;
 }
 
 #content {
