Sane skins should implement visualClear
It's needed and used by social tools and many other extensions as well.

Change-Id: I73600cf2ff5a9df2b5c407e7a1383afd434811f7

--- a/refreshed/styles/screen/common.less
+++ b/refreshed/styles/screen/common.less
@@ -707,6 +707,11 @@ a.feedlink {
 	vertical-align: middle;
 }
 
+/* General-purpose class used by many social tools and other extensions; see T287962 & T328235 */
+.visualClear {
+	clear: both;
+}
+
 #content {
 	line-height: 1.5em;
 	font-size: 0.875em;
