Move headers below toolbox with scroll-padding-top
Bug: T396956
Change-Id: I9683a16377ba332965539fcbf036c0dc0d5248c0
(cherry picked from commit f4c311c31e525c2bcdffa6532b003cca1b2d1970)

--- a/refreshed/styles/screen/mixins-public.less
+++ b/refreshed/styles/screen/mixins-public.less
@@ -156,9 +156,8 @@
 	the header.
 	Note these properties are adjusted with JS to account for the toolbox if it's
 	set to sticky. */
-	.mw-headline {
-		padding-top: @height;
-		margin-top: -@height;
+	html {
+		scroll-padding-top: @height;
 	}
 
 	.mixin-helper-resize-header-icons( @height / 2 );
